2004-09-11  Theodore A. Roth  <troth@openavr.org>

	* config/tc-avr.c: Add support for
	atmega48, atmega88, atmega168, attiny13, attiny2313, at90can128.

2004-09-09  Alan Modra  <amodra@bigpond.net.au>

	* dw2gencfi.c (select_cie_for_fde): When separating CIE out
	from FDE, treat a CFI_escape as we do a DW_CFA_advance_loc.

2004-09-08  Paul Brook  <paul@codesourcery.com>

	* config/obj-elf.c (obj_elf_section_type): Handle init_array,
	fini_array and preinit_array section types.
	* config/tc-ia64.c (ia64_elf_section_type): Remove init_array
	and fini_array.
	* doc/as.texinfo: Document extra section types.

2004-09-02  Mark Mitchell  <mark@codesourcery.com>

	* Makefile.am (TARG_ENV_HFILES): Add te-symbian.h.
	* Makefile.in: Regenerated.
	* configure.in: Set em for arm*-*-symbianelf*.
	* configure: Regenerated.
	* config/tc-arm.c (elf32_arm_target_format): Use Symbian target
	vectors when appropriate.
	* config/te-symbian.h: New file.

2004-09-03  Tomer Levi  <Tomer.Levi@nsc.com>

	* config/tc-crx.c (gettrap): Exception vector can be case
	insensitive.
	(process_label_constant): Fix a 32-bit displacement bug in branch 
	instructions.
	(get_operandtype) : Bug fix, wrong operand was used.
	(process_label_constant): Initialize relocation type to 
	BFD_RELOC_NONE

2004-09-01  Richard Earnshaw < reanrsha@arm.com>

	* tc-arm.c (arm_cpus, arm_fpus): Allow <cpu>-s as well as <cpu>s
	for synthesizable cores.

	* doc/c-arm.texi (ARM Options): Document canonical names of CPUs.

2004-08-25  Dmitry Diky  <diwil@spec.ru>

	* config/tc-msp430.c:	Clean-up the code.
	(md_relax_table): New relax table.
	(mcu_types): Sort MCU types.
	(md_pseudo_table): Add .profiler pseudo handler.
	(pow2value): New function.
	(msp430_profiler): New function.
	(msp430_operands): Add new insns handlers.
	(msp430_srcoperand): Add register operand handler, allow complex
	expressions.
	(md_estimate_size_before_relax): Rewritten.
	(md_convert_frag): Rewritten.
	(msp430_relax_frag): New function.